# SingboxGUI-rust

./: .gitignore  Cargo.toml  README.md  package.json
src/: main.rs
