[package]
name = "singboxgui-rust"
version = "0.1.0"
edition = "2021"
description = "A graphical user interface for Sing-box, rewritten in Rust for better performance and stability."
license = "MIT OR Apache-2.0"
repository = "https://github.com/yolialisproxy/SingboxGUI-rust"

[dependencies]
eframe = "0.28"
egui = "0.28"
systray = { version = "0.5", optional = true }
# We'll use conditional compilation for tray